# oddlike

./: .gitignore  CMakeLists.txt
src/: animation_handler.cpp  animation_handler.h  constants.h  main.cpp  player.cpp  player.h
